--- a/css-sass/_cssgrids-responsive.scss
+++ b/css-sass/_cssgrids-responsive.scss
@@ -190,7 +190,7 @@
 }
 
 /* desktop */
-@media (min-width:($mq-tablet)) {
+@media only screen and (min-width:($mq-tablet)) {
     .yui3-visible-phone {
         display: none !important;
     }
@@ -202,7 +202,7 @@
     }
 }
 /* tablet */
-@media (min-width:($mq-phone + 1px)) and (max-width:($mq-tablet - 1px)) {
+@media only screen and (min-width:($mq-phone + 1px)) and (max-width:($mq-tablet - 1px)) {
     .yui3-visible-phone {
         display: none !important;
     }
@@ -214,7 +214,7 @@
     }
 }
 /* phone */
-@media (max-width:$mq-phone) { 
+@media only screen and (max-width:$mq-phone) { 
     .yui3-g-r > [class ^= "yui3-u"] {
         width: 100%;
     }
