--- a/css-sass/view/_mainmenu.scss
+++ b/css-sass/view/_mainmenu.scss
@@ -105,7 +105,7 @@
 }
 
 /* phone & tablet */
-@media (max-width:(1000px)) {
+@media only screen and (max-width:(1000px)) {
 	.mainMenuWrapper {
 		position:fixed;
 		left:-151px;
@@ -199,7 +199,7 @@
 	}
 } 
 
-@media (max-height:(320px)) {
+@media only screen and (max-height:(320px)) {
 	.mainMenu {
 		overflow-y:scroll;
 		height:240px;
@@ -207,7 +207,7 @@
 	}
 }
 
-@media (max-width:($mq-phone)) {
+@media only screen and (max-width:($mq-phone)) {
 	.secondaryMenu li:first-child {
 		display:none; 
 	}
@@ -217,13 +217,13 @@
 	}
 }
 
-@media (max-width:($mq-tablet)) {
+@media only screen and (max-width:($mq-tablet)) {
 	.view-navigation.active {
 		top:7px;
 	}
 }
 
-@media (min-width: 481px) and (max-width: 960px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
 	.page-section-top {
 		padding-top:11px;
 	}
