--- a/css-sass/view/animation/_accuplex.scss
+++ b/css-sass/view/animation/_accuplex.scss
@@ -3,7 +3,7 @@
 	margin: 0 16%;
 
 	/* phone */
-	@media (max-width:($mq-phone)) {
+	@media only screen and (max-width:($mq-phone)) {
 		margin-top: 5%;
 		margin-bottom: 7%;
 	}
