--- a/css-sass/view/animation/_cbc.scss
+++ b/css-sass/view/animation/_cbc.scss
@@ -3,7 +3,7 @@
 	margin: 0 9% 0 22%;
 
 	/* phone */
-	@media (max-width:($mq-phone)) {
+	@media only screen and (max-width:($mq-phone)) {
 		margin-right: 0%;
 		margin-left: 19%;
 	}
