--- a/css-sass/view/animation/_felv-fiv.scss
+++ b/css-sass/view/animation/_felv-fiv.scss
@@ -3,7 +3,7 @@
 	margin: 2% 14% 0 10%;
 
 	/* phone */
-	@media (max-width:($mq-phone)) {
+	@media only screen and (max-width:($mq-phone)) {
 		margin-top: 15%;
 		margin-bottom: 12%;
 	}
