--- a/css-sass/view/animation/_heartworm.scss
+++ b/css-sass/view/animation/_heartworm.scss
@@ -3,7 +3,7 @@
 	margin: -8.5% 0;
 
 	/* phone */
-	@media (max-width:($mq-phone)) {
+	@media only screen and (max-width:($mq-phone)) {
 		margin-top: 0;
 		margin-bottom: 0;
 	}
