--- a/css-sass/view/subtest/_select.scss
+++ b/css-sass/view/subtest/_select.scss
@@ -65,7 +65,7 @@
 	}
 
     /* phone */
-    @media (max-width:($mq-phone)) {
+    @media only screen and (max-width:($mq-phone)) {
         .options {
             padding-top: 0;
             padding-bottom: 0;
