--- a/css-sass/view/test/_cbc.scss
+++ b/css-sass/view/test/_cbc.scss
@@ -7,7 +7,7 @@
         padding-right: 10px;
 
         /* desktop */
-        @media (min-width:($mq-tablet)) {
+        @media only screen and (min-width:($mq-tablet)) {
             padding-left: 5%;
         }
 
@@ -59,7 +59,7 @@
     }
     
     /* phone */
-    @media (max-width:($mq-phone)) {
+    @media only screen and (max-width:($mq-phone)) {
         .chart {
             border-right: 0;
             padding-right: 0;
