--- a/css-sass/view/test/_chemistry.scss
+++ b/css-sass/view/test/_chemistry.scss
@@ -6,7 +6,7 @@
     }
     
     /* phone */
-    @media (max-width:$mq-phone) {
+    @media only screen and (max-width:$mq-phone) {
         .subtest-container {
             padding: 10px 0;
         }
