--- a/css-sass/view/test/_thyroxine.scss
+++ b/css-sass/view/test/_thyroxine.scss
@@ -5,7 +5,7 @@
         max-width: 300px;
 
         /* phone */
-        @media (max-width:$mq-phone) {
+        @media only screen and (max-width:$mq-phone) {
             margin: 0 auto;
         }
     }
