--- a/css-sass/view/widget/_arrow.scss
+++ b/css-sass/view/widget/_arrow.scss
@@ -66,7 +66,7 @@ $widgetArrowWidthPhone: 17px;
     }
 
     /* Phone */
-    @media (max-width:$mq-phone) {
+    @media only screen and (max-width:$mq-phone) {
         &.shrink {
             width: $widthPhone;
             height: $heightPhone;
