--- a/css-sass/view/widget/_circle-arrow.scss
+++ b/css-sass/view/widget/_circle-arrow.scss
@@ -60,7 +60,7 @@ $widgetCircleArrowWidthPhone: image-width($widgetCircleArrowBgImagePhone);
         }
     }
 
-    @media (max-width:($mq-phone)) {
+    @media only screen and (max-width:($mq-phone)) {
         width: $widthPhone;
         height: $heightPhone;
 
