--- a/js/template/subtest/RangeGroup.html
+++ b/js/template/subtest/RangeGroup.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <div class="yui3-g yui3-visible-phone">
+    <div class="yui3-g yui3-visible-phone yui3-hidden-print">
         <div class="yui3-u-1">
             <div class="details-container"></div>
         </div>
