--- a/css-sass/view/_report.scss
+++ b/css-sass/view/_report.scss
@@ -10,5 +10,9 @@
         z-index: 2;
 
         overflow: hidden;
+        
+        @media print {
+            display: none;
+        }
     }
 }
